--- a/etc/userdb.example
+++ b/etc/userdb.example
@@ -13,10 +13,36 @@
 # '/' can be used to write a regular expression 
 #
 root:x:!root
+root:x:!0
+root:x:!111111
+root:x:!123
+root:x:!1234
+root:x:!12345
 root:x:!123456
+root:x:!1234567
+root:x:!12345678
+root:x:!123456789
+root:x:!qwerty
+root:x:!toor
+root:x:!test
+root:x:!password
+root:x:!administrator
+root:x:!webmaster
+root:x:!Passw@rd
+root:x:!wedadmin
+root:x:!toor
+root:x:!test123
+root:x:!ftpuser
+root:x:!support
+root:x:!admin123
+root:x:!admin1234
+root:x:!Admin123
+root:x:!Admin1234
+root:x:!ubnt
+root:x:!student
 root:x:!/honeypot/i
 root:x:*
-tomcat:x:*
-oracle:x:*
-*:x:somepassword
-*:x:*
+/hikvision/i:x:*
+/ftpuser/i:x:*
+/docker/i:x:*
+/elastic/i:x:*
