--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ cryptography==42.0.8
 packaging==24.0
 #pyasn1_modules==0.4.0
 #pyparsing==3.1.2
-service_identity==24.1.0
-tftpy==0.8.2
-treq==23.11.0
-twisted==24.3.0
+#service_identity==24.1.0
+#tftpy==0.8.2
+#treq==23.11.0
+#twisted==24.3.0
