--- a/requirements-output.txt
+++ b/requirements-output.txt
@@ -3,7 +3,7 @@ csirtgsdk==1.1.5
 geoip2
 
 # dshield
-#requests==2.32.3
+requests==2.32.3
 
 # elasticsearch
 elasticsearch==8.14.0
@@ -12,31 +12,31 @@ elasticsearch==8.14.0
 hpfeeds==3.1.0
 
 # mysql
-#mysql-connector-python==8.3.0
+mysql-connector-python==8.3.0
 
 # mongodb
-#pymongo==4.6.3
+pymongo==4.6.3
 
 # rethinkdblog
-#rethinkdb==2.4.10.post1
+rethinkdb==2.4.10.post1
 
 # s3
-#botocore==1.34.136
+botocore==1.34.136
 
 # slack
-#slackclient==2.9.4
+slackclient==2.9.4
 
 # influxdb
-#influxdb==5.3.2
+influxdb==5.3.2
 
 # dblog_xmpp
-#wokkel==18.0.0
+wokkel==18.0.0
 
 # misp
-#pymisp==2.4.194
+pymisp==2.4.194
 
 # redis
-#redis==5.0.6
+redis==5.0.6
 
 # Oracle Cloud
-#oci==2.129.2
+oci==2.129.2
